--- a/blog-FE/src/app/pages/all-posts/all-posts.component.html
+++ b/blog-FE/src/app/pages/all-posts/all-posts.component.html
@@ -26,7 +26,7 @@
     <mat-card-actions>
         <button mat-raised-button color="primary">{{post.likeCount}} <mat-icon>favorite</mat-icon></button>
         <button mat-raised-button color="primary"  style="margin-left: 5px;">{{post.viewCount}} <mat-icon>remove_red_eye</mat-icon></button>
-        <button mat-raised-button color="primary" style="margin-left: 5px;">View Post</button>
+        <button mat-raised-button color="primary" style="margin-left: 5px;" routerLink="/post/{{post.id}}">View Post</button>
     </mat-card-actions>
   </mat-card>
 </div>
