--- a/blog-FE/src/app/pages/view-post/view-post.component.html
+++ b/blog-FE/src/app/pages/view-post/view-post.component.html
@@ -1,7 +1,7 @@
 <div class="card-container" *ngIf="post">
   <mat-card>
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
+      <!-- <div mat-card-avatar class="example-header-image"></div> -->
       <mat-card-title>{{ post.name }}</mat-card-title>
       <mat-card-subtitle
         >Posted by: {{ post.postedBy }} | Posted on:
@@ -9,18 +9,18 @@
       >
     </mat-card-header>
 
-    <img mat-card-image [src]="post.img"   class="post-img" />
+    <img mat-card-image [src]="post.img" class="post-img" />
 
-    <br>
+    <br />
     <mat-card-content>
       {{ post.content }}
     </mat-card-content>
-    <br>
+    <br />
     <mat-chip-set>
-        <mat-chip *ngFor="let tag of post.tags">{{tag}}</mat-chip>
+      <mat-chip *ngFor="let tag of post.tags">{{ tag }}</mat-chip>
     </mat-chip-set>
     <mat-card-actions>
-      <button mat-raised-button color="primary">
+      <button mat-raised-button color="primary" (click)="likePost()">
         {{ post.likeCount }} <mat-icon>favorite</mat-icon>
       </button>
       <button mat-raised-button color="primary" style="margin-left: 5px">
@@ -28,4 +28,46 @@
       </button>
     </mat-card-actions>
   </mat-card>
+
+  <mat-card class="comment-card">
+    <mat-card-content>
+      <h4>Add a comment</h4>
+      <div>
+        <form [formGroup]="commentForm">
+          <mat-form-field appearance="fill">
+            <mat-label>Message</mat-label>
+            <textarea matInput formControlName="message"></textarea>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>Posted by</mat-label>
+            <input matInput formControlName="postedBy" />
+          </mat-form-field>
+
+          <button
+            mat-raised-button
+            color="primary"
+            style="float: right"
+            [disabled]="!commentForm.valid"
+            (click)="addComment()"
+          >
+            Add
+          </button>
+        </form>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+  <div style="margin-top: 10px">
+    <h4>Comments</h4>
+    <mat-card style="margin-top: 10px" *ngFor="let comment of comments">
+      <mat-card-title>{{ comment.postedBy }}</mat-card-title>
+      <mat-card-subtitle>{{
+        comment.createdAt | date : "medium"
+      }}</mat-card-subtitle>
+      <mat-card-content>
+        {{ comment.message }}
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
