search component added

--- a/blog-FE/src/app/pages/search-post/search-post.component.scss
+++ b/blog-FE/src/app/pages/search-post/search-post.component.scss
@@ -19,3 +19,12 @@ mat-card{
     margin-top: 15px;
 }
 
+.search-form{
+    text-align: center;
+    margin-top: 10px;
+}
+
+.postNotFound{
+    text-align: center;
+    margin-top: 10px;
+}
