--- a/blog-FE/src/app/app.component.html
+++ b/blog-FE/src/app/app.component.html
@@ -1,15 +1,20 @@
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
   <span>Blog</span>
   <span class="example-spacer"></span>
 
-  <button class="addPost-btn" mat-raised-button color="primary" routerLink="/add-post" >Add New Post</button>
-  <button mat-raised-button color="primary" routerLink="/posts" >View Posts</button>
- 
-
+  <button
+    class="addPost-btn"
+    mat-raised-button
+    color="primary"
+    routerLink="/add-post"
+  >
+    Add New Post
+  </button>
+  <button
+  class="viewPost-btn" mat-raised-button color="primary" routerLink="/posts">
+    View Posts
+  </button>
+  <button mat-raised-button color="primary" routerLink="/search">Search</button>
 </mat-toolbar>
-
 
 <router-outlet></router-outlet>
